# Deep-Learning-App

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
docker/nginx/: Dockerfile
docker/nginx/conf/: default.conf
docker/python/: Dockerfile
src/: main.py
src/UseCases/Math/: DifferentialUseCase.py  FunctionsUseCase.py  MatrixUseCase.py
src/handlers/: MathHandler.py
