[tool.poetry]
name = "deep-learning-app"
version = "0.1.0"
description = ""
authors = ["Hiromichi1729 <hiromichi_1729@yahoo.co.jp>"]
readme = "README.md"
packages = [{include = "deep_learning_app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
numpy = "1.24"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
